--- a/package.json
+++ b/package.json
@@ -28,6 +28,11 @@
     "globals": "^16.4.0",
     "vite": "^7.1.7"
   },
+  "browserslist": [
+    "defaults",
+    "not IE 11",
+    "maintained node versions"
+  ],
   "description": "Frontend for the Student Management System built with React and Vite.",
   "keywords": ["react", "vite", "student-management"],
   "author": "Bokang Ntsalong",
