--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
+    "mysql2": "^3.15.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
@@ -34,7 +37,11 @@
     "maintained node versions"
   ],
   "description": "Frontend for the Student Management System built with React and Vite.",
-  "keywords": ["react", "vite", "student-management"],
+  "keywords": [
+    "react",
+    "vite",
+    "student-management"
+  ],
   "author": "Bokang Ntsalong",
   "license": "ISC",
   "repository": {
